# Sem_-6_Full_Stack_23BAI71449_23AIT_KRG_1

EST/Experiment 1 Memo/src/: App.jsx
EST/Experiment 3 CORS java/frontend/src/: App.js
EST/project j/backend/: pom.xml
EST/project_1.1/: index.html  package-lock.json  package.json
EST/project_1.1/src/: List.jsx
Experiment 1/Code/: index.html  package-lock.json  package.json
Experiment 1/Code/src/: App.jsx
Experiment 1/Code/src/components/: Header.jsx
Experiment 1/Code/src/data/: logs.js
Experiment 1/Code/src/pages/: calculations.js  logs.js
Experiment 10/: README.md  main.py  nn_from_scratch.ipynb  pyproject.toml
Experiment 4/23BAI71449_Experiment 4 (React App)/src/: App.jsx  index.js
Experiment 4/23BAI71449_Experiment 4 (React App)/src/components/: Header.jsx
Experiment 4/23BAI71449_Experiment 4 (React App)/src/data/: logs.js
Experiment 4/23BAI71449_Experiment 4 (React App)/src/pages/: DashboardLayout.jsx  Login.jsx  Logout.jsx  Logs.jsx
Experiment 4/23BAI71449_Experiment 4 (React App)/src/routes/: ProtectedRoute.jsx
Experiment 4/23BAI71449_Experiment 4 (React App)/src/store/: logSlice.jsx  store.jsx
Experiment 9/backend/backend/: pom.xml
Experiment 9/backend/backend/src/main/java/com/classroom/security/: SecurityDemoApplication.java
Experiment 9/frontend/: api.js  index.html
lab-mst-experiment-1/: index.html  package-lock.json  package.json
lab-mst-experiment-1/src/: App.css  App.jsx
lab-mst-experiment-1/src/components/: TaskManager.jsx
lab-mst-experiment-1/src/hooks/: useForm.js
(+32 files in other folders)
