[project]
name = "neural-network-scratch-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "panda>=0.3.1",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
]
